--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Технологии Будущего</title>
+    <title>Будущее Сегодня</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Технологии Будущего</h1>
+        <h1>Будущее Сегодня</h1>
         <div class="grid">
             <div class="cell" data-tech="BCI">
                 <img src="images/BCI.png" alt="BCI" class="tech-image">
