--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
         <h1>Будущее Сегодня</h1>
         <div class="grid">
             <div class="cell" data-tech="BCI">
-                <img src="images/BCI.png" alt="BCI" class="tech-image">
+                <img src="images/BCI.webp" alt="BCI" class="tech-image">
                 <div class="tech-label">Brain-Computer Interface (BCI)</div>
             </div>
             <div class="cell" data-tech="AR">
-                <img src="images/AR.png" alt="AR" class="tech-image">
+                <img src="images/AR.webp" alt="AR" class="tech-image">
                 <div class="tech-label">Augmented Reality (AR)</div>
             </div>
             <div class="cell" data-tech="Quantum">
-                <img src="images/Quantum.png" alt="Quantum" class="tech-image">
+                <img src="images/Quantum.webp" alt="Quantum" class="tech-image">
                 <div class="tech-label">Квантовые вычисления</div>
             </div>
             <div class="cell" data-tech="Genetic">
-                <img src="images/Genetic.png" alt="Genetic" class="tech-image">
+                <img src="images/Genetic.webp" alt="Genetic" class="tech-image">
                 <div class="tech-label">Генетическое редактирование</div>
             </div>
             <div class="cell" data-tech="Invisibility">
-                <img src="images/Invisibility.png" alt="Invisibility" class="tech-image">
+                <img src="images/Invisibility.webp" alt="Invisibility" class="tech-image">
                 <div class="tech-label">Технологии невидимости</div>
             </div>
             <div class="cell" data-tech="Nanotech">
-                <img src="images/Nanotech.png" alt="Nanotech" class="tech-image">
+                <img src="images/Nanotech.webp" alt="Nanotech" class="tech-image">
                 <div class="tech-label">Нанотехнологии</div>
             </div>
             <div class="cell" data-tech="Drones">
-                <img src="images/Drones.png" alt="Drones" class="tech-image">
+                <img src="images/Drones.webp" alt="Drones" class="tech-image">
                 <div class="tech-label">Автономные дроны</div>
             </div>
             <div class="cell" data-tech="AI">
-                <img src="images/AI.png" alt="AI" class="tech-image">
+                <img src="images/AI.webp" alt="AI" class="tech-image">
                 <div class="tech-label">Искусственный интеллект</div>
             </div>
             <div class="cell" data-tech="Synthetic">
-                <img src="images/Synthetic.png" alt="Synthetic" class="tech-image">
+                <img src="images/Synthetic.webp" alt="Synthetic" class="tech-image">
                 <div class="tech-label">Синтетическая биология</div>
             </div>
             <div class="cell" data-tech="Holograms">
-                <img src="images/Holograms.png" alt="Holograms" class="tech-image">
+                <img src="images/Holograms.webp" alt="Holograms" class="tech-image">
                 <div class="tech-label">Голографические дисплеи</div>
             </div>
             <div class="cell" data-tech="Plasma">
-                <img src="images/Plasma.png" alt="Plasma" class="tech-image">
+                <img src="images/Plasma.webp" alt="Plasma" class="tech-image">
                 <div class="tech-label">Плазменные двигатели</div>
             </div>
             <div class="cell" data-tech="Smart">
-                <img src="images/Smart.png" alt="Smart" class="tech-image">
+                <img src="images/Smart.webp" alt="Smart" class="tech-image">
                 <div class="tech-label">Умные материалы</div>
             </div>
         </div>
